Add navigation bar

--- a/style.css
+++ b/style.css
@@ -15,8 +15,7 @@
 body {
    
     margin: 0px 0 20px 0;
-    padding: 0px 0 20px 0;
-    
+    padding: 0px 0 20px 0;   
 }
 
 #logo {
@@ -26,4 +25,11 @@ body {
     margin-top:0;
     transform: translateX(50%);
     color: rgba(230, 219, 209, 0.6)
+    }
+
+    ul {
+        list-style-type:none;
+        margin: 0%;
+        padding: 0%;
+    
     }
