Add basic nav bar structure and styling, change logo font

--- a/style.css
+++ b/style.css
@@ -1,35 +1,64 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@800&display=swap');
-
-.background {
-
-    background-image:url('images/shutterstock_1712342506.jpg');
-    background-color: rgba(255, 255, 255, 0.356);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    overflow: hidden;
-    width: 100vh;
-    height: 100vh;
+@import url('https://fonts.googleapis.com/css2?family=Markazi+Text&family=Montserrat:wght@600&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
 }
 
 body {
-   
-    margin: 0px 0 20px 0;
-    padding: 0px 0 20px 0;   
+    font-family: Markazi, sans-serif;
+    font-weight: 200;
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+.background {
+    background-image: url('images/shutterstock_1712342506.jpg');
+    background-color: rgba(255, 255, 255, 0.356);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    overflow: hidden;
+    width: 110vh;
+    height: 100vh;
 }
 
 #logo {
-    font-size: 70px;
-    font-family: Kanit, sans-serif;
-    text-align: center;
-    margin-top:0;
-    transform: translateX(50%);
-    color: rgba(230, 219, 209, 0.6)
-    }
+    font-size: 400%;
+    font-family: Montserrat, sans-serif;
+    float: left;
+    margin-top: 0;
+    color: rgba(230, 219, 209, 0.8);
+}
 
-    ul {
-        list-style-type:none;
-        margin: 0%;
-        padding: 0%;
-    
-    }
+
+/* Nav bar */
+
+#menu {
+    display: flex;
+    flex-wrap: wrap;
+    order: 10;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-size: 110%;
+    font-family: Montserrat, sans-serif;
+    overflow: hidden;
+    clear: both;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    background-color: rgba(230, 219, 209, 0.6);
+    border: 1px solid gray;
+    text-decoration: none;
+    text-align: center;
+    width: 110px;
+    padding: 20px;
+}
