--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     background-size: cover;
     background-attachment: fixed;
     overflow: hidden;
-    width: 110vh;
+    width: 200vh;
     height: 100vh;
 }
 
@@ -36,29 +36,31 @@ body {
 
 /* Nav bar */
 
-#menu {
-    display: flex;
-    flex-wrap: wrap;
-    order: 10;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    font-size: 110%;
-    font-family: Montserrat, sans-serif;
-    overflow: hidden;
-    clear: both;
+.nav {
+    display: grid;
+    width: 100%;
+    height: 250px;
+    grid-template-areas: "head head" "nav  nav" "foot";
 }
 
-li {
-    float: left;
+#menu {
+    grid-area: nav nav;
+    list-style-type: none;
+    font-family: Montserrat, sans-serif;
+    font-size: 115%;
+    letter-spacing: 5px;
+    display: flex;
+    text-align: center;
+    background-color: rgba(230, 219, 209, 0.6);
+    padding: 20px;
+    width: 100%;
+}
+
+#menu li {
+    flex: 1;
 }
 
 li a {
-    display: block;
-    background-color: rgba(230, 219, 209, 0.6);
-    border: 1px solid gray;
     text-decoration: none;
-    text-align: center;
-    width: 110px;
-    padding: 20px;
+    color: white;
 }
