--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 .nav {
     display: grid;
     width: 100%;
-    height: 250px;
+    height: 100px;
     grid-template-areas: "head head" "nav  nav" "foot";
 }
 
@@ -68,4 +68,27 @@ li a {
 a:hover {
     background-color: rgba(34, 28, 28, 0.63);
     padding: 20px;
+}
+
+.intro {
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 25% 25% 25% 25%;
+}
+img {
+    width: 350px;
+    height: 350px;
+    grid-area: 2/1/2/4;
+    position: absolute;
+  
+}
+.intro-text-box {
+  font-size: 170%;
+  color: white;
+  letter-spacing: 3px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  text-decoration: overline;
+  
+
 }
