--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     margin: 0;
     padding: 0;
     border: none;
+    overflow: scroll;
 }
 
 .background {
@@ -20,7 +21,6 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    overflow: hidden;
     width: 200vh;
     height: 100vh;
 }
@@ -41,6 +41,9 @@ body {
     width: 100%;
     height: 100px;
     grid-template-areas: "head head" "nav  nav" "foot";
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 
 #menu {
@@ -69,26 +72,35 @@ a:hover {
     background-color: rgba(34, 28, 28, 0.63);
     padding: 20px;
 }
-
-.intro {
+.intro-text-box {
+    font-size: 170%;
+    color: white;
+    letter-spacing: 3px;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    text-decoration: overline;
+  }
+  /* Circle photos styling*/
+.circle-1 {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
     grid-template-rows: 25% 25% 25% 25%;
 }
-img {
-    width: 350px;
-    height: 350px;
+.circle-1 img {
+    width: 430px;
+    height: 430px;
     grid-area: 2/1/2/4;
-    position: absolute;
-  
+    position: absolute; 
 }
-.intro-text-box {
-  font-size: 170%;
-  color: white;
-  letter-spacing: 3px;
-  margin-bottom: 20px;
-  text-transform: uppercase;
-  text-decoration: overline;
-  
 
+.circle-2 {
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 25% 25% 25% 25%;
+}
+
+.circle-2 img {
+    width: 450px;
+    height: 450px;
+    grid-area: 2/2/5/4;
 }
