--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ a:hover {
     color: rgb(53, 51, 51);
     position: absolute;
     top: 360px; 
-    left:35px;
+    left:30px;
     font-family:Montserrat, sans-serif;
 
 }
@@ -142,5 +142,23 @@ div > .circle-1 {
     font-family: Montserrat, sans-serif;
     top: 270px;
     left: 570px;
+    font-size:180%
+}
+
+
+.circle-3 > #circle-text-3 {
+    color: rgb(53, 51, 51);
+    position: absolute;
+    left: 30px;
+    top: 820px;
+    font-family:Montserrat, sans-serif;
+}
+
+#gym {
+    color: rgb(53, 51, 51);
+    position: absolute;
+    font-family: Montserrat, sans-serif;
+    top: 720px;
+    left: 180px;
     font-size:180%
 }
