--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ div > .circle-1 {
     color: rgb(53, 51, 51);
     position: absolute;
     font-family: Montserrat, sans-serif;
-    top:270px;
+    top:300px;
     left:180px;
     font-size:180%
     
@@ -140,7 +140,7 @@ div > .circle-1 {
     color: rgb(53, 51, 51);
     position: absolute;
     font-family: Montserrat, sans-serif;
-    top: 270px;
+    top: 300px;
     left: 570px;
     font-size:180%
 }
@@ -158,7 +158,25 @@ div > .circle-1 {
     color: rgb(53, 51, 51);
     position: absolute;
     font-family: Montserrat, sans-serif;
-    top: 720px;
+    top: 750px;
     left: 180px;
+    font-size:180%
+}
+
+
+.circle-4 > #circle-text-4 {
+    color: rgb(53, 51, 51);
+    position: absolute;
+    left: 485px;
+    top: 820px;
+    font-family:Montserrat, sans-serif;
+}
+
+#bar {
+    color: rgb(53, 51, 51);
+    position: absolute;
+    font-family: Montserrat, sans-serif;
+    top: 750px;
+    left: 635px;
     font-size:180%
 }
