--- a/style.css
+++ b/style.css
@@ -32,9 +32,10 @@ body {
 #logo {
     font-size: 400%;
     font-family: Montserrat, sans-serif;
+    letter-spacing: 5px;
     float: left;
     margin-top: 0;
-    color: rgba(230, 219, 209, 0.8);
+    color: white;
 }
 
 
@@ -44,25 +45,21 @@ body {
     display: grid;
     width: 100%;
     height: 100px;
-    grid-template-areas: "head head" "nav  nav" "foot";
     position: sticky;
     top: 0;
     z-index: 100;
-  
 }
 
 #menu {
-    grid-area: nav nav;
-    list-style-type: none;
-    font-family: Montserrat, sans-serif;
-    font-size: 115%;
-    letter-spacing: 5px;
-    display: flex;
-    text-align: center;
-    background-color: rgba(230, 219, 209, 0.6);
-    padding: 20px 0 20px 0;
-    width: 100%;
-
+        list-style-type: none;
+        font-family: Montserrat, sans-serif;
+        font-size: 90%;
+        letter-spacing: 7px;
+        display: inline-grid;
+        text-align: center;
+        background-color: rgba(230, 219, 209, 0.6);
+        padding: 0;
+        width: 100%;
 }
 
 #menu li {
@@ -76,16 +73,16 @@ li a {
 
 a:hover {
     background-color: rgba(34, 28, 28, 0.63);
-    padding: 20px;
 }
+
 .intro-text-box {
+    display: inline-grid;
     font-size: 170%;
     color: white;
     letter-spacing: 3px;
-    margin-bottom: 20px;
+    margin-top: 70px;
     text-transform: uppercase;
-    text-decoration: overline;
-   font-family:Montserrat, sans-serif;
+    font-family: Montserrat, sans-serif;
 }
 
   /* Circle photos styling*/
@@ -98,6 +95,7 @@ a:hover {
 .circle-1 img, .circle-2 img, .circle-3 img, .circle-4 img {
     width: 100%;
     max-width: 450px;
+    padding: 0 0 20px 0;
     height: auto;
 }
 #circle-text-1 {
@@ -109,7 +107,7 @@ a:hover {
     
     color: rgb(53, 51, 51);
     position: absolute;
-    top: 360px; 
+    top: 335px; 
     left:30px;
     font-family:Montserrat, sans-serif;
 
@@ -122,7 +120,7 @@ div > .circle-1 {
     color: rgb(53, 51, 51);
     position: absolute;
     font-family: Montserrat, sans-serif;
-    top:300px;
+    top:270px;
     left:180px;
     font-size:180%
     
@@ -131,7 +129,7 @@ div > .circle-1 {
 .circle-2 > #circle-text-2 {
     color: rgb(53, 51, 51);
     position: absolute;
-    top: 360px;
+    top: 335px;
     left: 485px;
     font-family:Montserrat, sans-serif;
 }
@@ -140,7 +138,7 @@ div > .circle-1 {
     color: rgb(53, 51, 51);
     position: absolute;
     font-family: Montserrat, sans-serif;
-    top: 300px;
+    top: 270px;
     left: 570px;
     font-size:180%
 }
@@ -158,7 +156,7 @@ div > .circle-1 {
     color: rgb(53, 51, 51);
     position: absolute;
     font-family: Montserrat, sans-serif;
-    top: 750px;
+    top: 745px;
     left: 180px;
     font-size:180%
 }
@@ -176,7 +174,24 @@ div > .circle-1 {
     color: rgb(53, 51, 51);
     position: absolute;
     font-family: Montserrat, sans-serif;
-    top: 750px;
+    top: 745px;
     left: 635px;
     font-size:180%
+}
+
+/*Footer styling */
+
+footer {
+    background-color: rgba(230, 219, 209, 0.6);
+    padding: 20px 0 20px 0;
+}
+.footer {
+    text-align: center;
+    padding: 20px 0 20px 0;
+    width: 100%;
+    font-family: Montserrat, sans-serif;
+    color: white;
+    font-size: 115%;
+    letter-spacing: 5px;
+
 }
