--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
     height: 100vh;
 }
 
+
 #logo {
     font-size: 400%;
     font-family: Montserrat, sans-serif;
@@ -49,7 +50,9 @@ body {
     top: 0;
     z-index: 100;
 }
-
+nav {
+    border: 2px solid white;
+}
 #menu {
         list-style-type: none;
         font-family: Montserrat, sans-serif;
@@ -69,10 +72,13 @@ body {
 li a {
     text-decoration: none;
     color: white;
+    transition: background-color .5s;
 }
 
-a:hover {
+li a:hover {
     background-color: rgba(34, 28, 28, 0.63);
+    padding: 3.52px;
+
 }
 
 .intro-text-box {
@@ -184,6 +190,7 @@ div > .circle-1 {
 footer {
     background-color: rgba(230, 219, 209, 0.6);
     padding: 20px 0 20px 0;
+    border: 2px solid white;
 }
 .footer {
     text-align: center;
@@ -194,4 +201,24 @@ footer {
     font-size: 115%;
     letter-spacing: 5px;
 
+}
+
+/* Pool styling*/
+#goldie-pool {
+    position: relative;
+    display: grid;
+    justify-content: space-evenly;
+}
+#goldie-pool img {
+    width: 600px;
+    height: 450px;
+}
+.background-pool {
+    background-color: rgba(112, 74, 38, 0.877);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100%;
+    height: 100vh;
 }
