--- a/style.css
+++ b/style.css
@@ -204,15 +204,6 @@ footer {
 }
 
 /* Pool styling*/
-#goldie-pool {
-    position: relative;
-    display: grid;
-    justify-content: space-evenly;
-}
-#goldie-pool img {
-    width: 600px;
-    height: 450px;
-}
 .background-pool {
     background-color: rgba(112, 74, 38, 0.877);
     background-position: center center;
@@ -221,4 +212,28 @@ footer {
     background-attachment: fixed;
     width: 100%;
     height: 100vh;
+}
+#goldie-pool {
+    position: relative;
+    display: grid;
+    justify-content: space-evenly;
+}
+#goldie-pool img {
+    width: 600px;
+    height: 450px;
+    margin-top: 20px;
+}
+.pool-text {
+    font-family: Montserrat, sans-serif;
+    color: white;
+    font-size: 80%;
+    letter-spacing: 3px;
+    margin-top: 20px;
+}
+.pool-info {
+    font-family: Montserrat, sans-serif;
+    color: white;
+    font-size: 80%;
+    letter-spacing: 3px;
+    margin-top: 20px;
 }
