--- a/style.css
+++ b/style.css
@@ -16,6 +16,16 @@ body {
     overflow: scroll;
     scroll-behavior: smooth;
     overflow-x: hidden;
+    display: grid;
+    grid-template-columns: 30% 30% auto;
+    grid-template-rows: 150px 50px 450px 450px auto 150px;
+    grid-template-areas: "hd hd hd"
+                        "text text text"
+                        "img1 img2 n"
+                        "img3 img4 0"
+                        "foot foot foot";
+    
+    
 }
 
 .background {
@@ -31,11 +41,9 @@ body {
 
 
 #logo {
-    font-size: 400%;
+    font-size: 170%;
     font-family: Montserrat, sans-serif;
     letter-spacing: 5px;
-    float: left;
-    margin-top: 0;
     color: white;
 }
 
@@ -43,16 +51,15 @@ body {
 /* Nav bar */
 
 .nav {
-    display: grid;
     width: 100%;
     height: 100px;
-    position: sticky;
     top: 0;
     z-index: 100;
+    border-bottom: 2px solid white;
+    grid-area: hd;
+    
 }
-nav {
-    border: 2px solid white;
-}
+
 #menu {
         list-style-type: none;
         font-family: Montserrat, sans-serif;
@@ -63,6 +70,12 @@ nav {
         background-color: rgba(230, 219, 209, 0.6);
         padding: 0;
         width: 100%;
+        color: white;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
 }
 
 #menu li {
@@ -82,21 +95,15 @@ li a:hover {
 }
 
 .intro-text-box {
-    display: inline-grid;
-    font-size: 170%;
+    font-size: 50%;
     color: white;
     letter-spacing: 3px;
-    margin-top: 70px;
     text-transform: uppercase;
     font-family: Montserrat, sans-serif;
+    grid-area: text;
 }
 
   /* Circle photos styling*/
-  #circle-images {
-    display: grid;
-    grid-template-columns: auto minmax(500px, 1fr);
-    grid-template-areas: "top left";
-  }
 
 .circle-1 img, .circle-2 img, .circle-3 img, .circle-4 img {
     width: 100%;
@@ -104,6 +111,8 @@ li a:hover {
     padding: 0 0 20px 0;
     height: auto;
 }
+
+
 #circle-text-1 {
     display: flex;
     flex-direction: row;
@@ -118,9 +127,7 @@ li a:hover {
     font-family:Montserrat, sans-serif;
 
 }
-div > .circle-1 {
-    position: relative;
-}
+
 
 #pool {
     color: rgb(53, 51, 51);
@@ -191,6 +198,7 @@ footer {
     background-color: rgba(230, 219, 209, 0.6);
     padding: 20px 0 20px 0;
     border: 2px solid white;
+    grid-area: foot;
 }
 .footer {
     text-align: center;
