Add and position circle images using css grid

--- a/style.css
+++ b/style.css
@@ -94,17 +94,15 @@ li a:hover {
     padding: 3.52px;
 
 }
-
 .intro-text-box {
-    font-size: 150%;
+    font-size: 100%;
     color: white;
     letter-spacing: 3px;
     text-transform: uppercase;
     font-family: Montserrat, sans-serif;
     grid-area: text;
-    margin-top: 20px;
+    margin: 20px 0 0 20px;
 }
-
 
 /* Images styling */ 
 .container-1 {
@@ -113,7 +111,6 @@ li a:hover {
     display: grid;
     grid-area: img1;
 }
-
 .img-1 {
 width: 100%;
 height: 100%;
@@ -130,7 +127,28 @@ object-fit: fill;
     height: 100%;
     object-fit: fill;
     }
-
+.container-3 {
+        margin: 0 auto;
+        max-width: 60rem;
+        display: grid;
+        grid-area: img3;
+    }
+.img-3 {
+        width: 100%;
+        height: 100%;
+        object-fit: fill;
+        }
+.container-4 {
+            margin: 0 auto;
+            max-width: 60rem;
+            display: grid;
+            grid-area: img4;
+        }
+.img-4 {
+            width: 100%;
+            height: 100%;
+            object-fit: fill;
+            }
 /*Footer styling */
 
 footer {
@@ -138,6 +156,7 @@ footer {
     padding: 20px 0 20px 0;
     border: 2px solid white;
     grid-area: foot;
+    margin-top: 20px;
 }
 .footer {
     text-align: center;
