Add media query for css grid

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     border: none;
+    box-sizing: border-box;
     
 }
 
@@ -202,4 +203,17 @@ footer {
     font-size: 80%;
     letter-spacing: 3px;
     margin-top: 20px;
+}
+@media only screen and (max-width: 550px) {
+    body {
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.5fr 0.4fr 2.2fr 2.2fr 2.2fr 2.2fr 0.5fr;
+    grid-template-areas: "hd"
+                        "text"
+                        "img1"
+                        "img2"
+                        "img3"
+                        "img4"
+                        "foot";
+    }
 }
