--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     overflow-x: hidden;
     display: grid;
     grid-template-columns: 30% 30% auto;
-    grid-template-rows: 150px 50px 450px 450px auto 150px;
+    grid-template-rows: 0.5fr 0.3fr 3fr 3fr 0.5fr;
     grid-template-areas: "hd hd hd"
                         "text text text"
                         "img1 img2 n"
@@ -65,12 +65,12 @@ body {
 #menu {
         list-style-type: none;
         font-family: Montserrat, sans-serif;
-        font-size: 100%;
+        font-size: 150%;
         letter-spacing: 7px;
         display: inline-grid;
         text-align: center;
         background-color: rgba(230, 219, 209, 0.6);
-        padding: 0;
+        padding: 20px 0 20px 0;
         width: 100%;
         color: white;
         display: flex;
@@ -96,7 +96,7 @@ li a:hover {
 
 }
 .intro-text-box {
-    font-size: 100%;
+    font-size: 150%;
     color: white;
     letter-spacing: 3px;
     text-transform: uppercase;
@@ -115,7 +115,7 @@ li a:hover {
 .img-1 {
 width: 100%;
 height: 100%;
-object-fit: fill;
+object-fit: contain;
 }
 .container-2 {
     margin: 0 auto;
@@ -126,7 +126,7 @@ object-fit: fill;
 .img-2 {
     width: 100%;
     height: 100%;
-    object-fit: fill;
+    object-fit: contain;
     }
 .container-3 {
         margin: 0 auto;
@@ -137,7 +137,7 @@ object-fit: fill;
 .img-3 {
         width: 100%;
         height: 100%;
-        object-fit: fill;
+        object-fit:contain;
         }
 .container-4 {
             margin: 0 auto;
@@ -148,7 +148,7 @@ object-fit: fill;
 .img-4 {
             width: 100%;
             height: 100%;
-            object-fit: fill;
+            object-fit: contain;
             }
 /*Footer styling */
 
@@ -165,9 +165,8 @@ footer {
     width: 100%;
     font-family: Montserrat, sans-serif;
     color: white;
-    font-size: 90%;
+    font-size: 150%;
     letter-spacing: 5px;
-
 }
 
 /* Pool styling*/
