--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ li a:hover {
     margin: 20px 0 0 20px;
 }
 
-/* Images styling */ 
+/* Images and text styling */ 
 .container-1 {
     margin: 0 auto;
     max-width: 60rem;
@@ -117,6 +117,7 @@ width: 100%;
 height: 100%;
 object-fit: contain;
 }
+
 .container-2 {
     margin: 0 auto;
     max-width: 60rem;
@@ -204,6 +205,8 @@ footer {
     margin-top: 20px;
 }
 
+
+/* Media Queries*/
 @media only screen and (max-width: 450px) {
     body {
         grid-template-columns: 1fr;
