--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     border: none;
     box-sizing: border-box;
     
-}
+} 
 
 
 body {
@@ -117,7 +117,15 @@ width: 100%;
 height: 100%;
 object-fit: contain;
 }
-
+.pool-text {
+    font-family: Montserrat, sans-serif;
+    font-size: 1.5rem;
+    position: absolute;
+    grid-area: img1;
+    top: 12em;
+    left: 6em;
+    
+}
 .container-2 {
     margin: 0 auto;
     max-width: 60rem;
@@ -190,7 +198,7 @@ footer {
     height: 450px;
     margin-top: 20px;
 }
-.pool-text {
+.goldie-text {
     font-family: Montserrat, sans-serif;
     color: white;
     font-size: 80%;
