Add third column to grid in media query max-1000px

--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ footer {
 
 
 /* Media Queries*/
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 700px) {
     body {
         grid-template-columns: 1fr;
         grid-template-rows: 0.5fr 0.4fr 350px 350px 350px 350px 0.5fr;
@@ -295,16 +295,16 @@ footer {
         font-size: 1rem;
     }
 }
-@media screen and (max-width: 800px) and (min-width: 500px){
+@media screen and (max-width: 1000px) and (min-width: 700px){
 body {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 45% 45% auto;
     grid-template-rows: 0.5fr 0.3fr repeat(2, minmax(350px, 500px)) 0.5fr;
-    grid-template-areas: "hd hd"
-                        "text text"
-                        "img1 img2"
-                        "img3 img4"
-                        "foot foot";
+    grid-template-areas: "hd hd hd"
+                        "text text text"
+                        "img1 img2 0"
+                        "img3 img4 n"
+                        "foot foot foot";
                     }
     #menu {
         display: flex;
@@ -315,18 +315,7 @@ body {
 
     
 } 
-@media screen and (max-width: 1000px) and (min-width: 800px){
-    body {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 0.5fr 0.3fr repeat(2, minmax(350px, 500px)) 0.5fr;
-        grid-template-areas: "hd hd hd"
-                            "text text text"
-                            "img1 img2 0"
-                            "img3 img4 n"
-                            "foot foot foot";
-                        }
-                    }
+
 @media only screen and (max-width: 1500px) {
     
     #menu {
