--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ li a:hover {
 }
 
 .pool-text {
+    display: grid;
+    grid-template-columns: minmax(auto, 20em);
+    grid-template-rows:minmax(auto, 15em) ;
+    justify-content: center;
     text-align: center;
     font-family: Montserrat, sans-serif;
     font-size: 1.5rem;
@@ -135,10 +139,9 @@ li a:hover {
 
 }
 #pool-title {
-    grid-area: img1;
+    display: flex;
     font-size: 2rem;
    letter-spacing: 4px;
-    margin: 0 0 13.5em 0;
 }
 #pool-title a {
     text-decoration: none;
