--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ li a:hover {
     display: flex;
     font-size: 1.5rem;
    letter-spacing: 4px;
-   margin-bottom: 3%;
+   margin-bottom: 2%;
    
 }
 #pool-title a {
@@ -312,10 +312,10 @@ footer {
         font-size: 90%;
     }
     .pool-text {
-        font-size: 80%;
+        font-size: smaller;
     }   
 }
-@media screen and (max-width: 1000px) and (min-width: 700px){
+@media screen and (max-width: 1050px) and (min-width: 700px){
 body {
     display: grid;
     grid-template-columns: 45% 45% auto;
@@ -348,20 +348,20 @@ body {
     font-size: 70%;  
     }
     .pool-text {
-        font-size: 85%;
+        font-size: small;
         grid-template-columns: minmax(auto, 18em);
         grid-template-rows:minmax(auto, 15em);
     }  
 }
 
 
-@media only screen and (max-width: 1300px) and (min-width: 1000px) {
+@media only screen and (max-width: 1200px) and (min-width: 1050px) {
     .pool-text {
-        font-size: 90%;
+        font-size: medium;
     }    
 }       
-@media only screen and (max-width: 1500px) and (min-width: 1150px) {
+@media only screen and (max-width: 2000px) and (min-width: 1200px) {
     .pool-text {
-        font-size: 100%;
+        font-size: large;
     }    
 }       
